[package]
name = "test-payment-canister"
version.workspace = true
edition.workspace = true


[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
export-api = []

[dependencies]
candid = { workspace = true }
serde = { workspace = true }

ic-exports = {path = "../../ic-exports"}
ic-storage = {path = "../../ic-storage"}
ic-canister = {path = "../../ic-canister/ic-canister"}
ic-helpers = {path = "../../ic-helpers"}
ic-payments = {path = "../"}

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}
