[package]
name = "test-payment-canister"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
export-api = []

[dependencies]
candid = { workspace = true }
serde = { workspace = true }

ic-exports = {path = "../../ic-exports"}
ic-storage = {path = "../../ic-storage"}
ic-canister = {path = "../../ic-canister/ic-canister"}
ic-payments = {path = "../"}

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}
