[package]
name = "ic-storage-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full"] }
