[package]
name = "ic-storage-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
