[package]
name = "canister-a"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

[dependencies]
candid = { workspace = true }
serde = { workspace = true }

ic-exports = {path = "../../../ic-exports"}
ic-storage = {path = "../../../ic-storage"}
ic-canister = {path = "../../ic-canister"}
ic-helpers = {path = "../../../ic-helpers"}

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}
