[package]
name = "canister-b"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
export-api = []

[dependencies]
serde = { workspace = true }
candid = { workspace = true }

ic-exports = {path = "../../../ic-exports"}
ic-storage = {path = "../../../ic-storage"}
ic-canister = {path = "../../ic-canister"}
ic-helpers = {path = "../../../ic-helpers"}
canister-a = {path = "../canister-a", features = ["export-api"]}


[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}