[package]
name = "canister-b"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

[dependencies]
candid = { workspace = true }
canister-a = { path = "../canister-a", features = ["export-api"] }
ic-canister = { path = "../../ic-canister" }
ic-exports = { path = "../../../ic-exports" }
ic-storage = { path = "../../../ic-storage" }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
