[package]
name = "canister-c"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

[dependencies]
serde = { workspace = true }
candid = { workspace = true }

ic-exports = { path = "../../../ic-exports" }
ic-storage = { path = "../../../ic-storage" }
ic-canister = { path = "../../ic-canister" }
ic-metrics = { path = "../../../ic-metrics", features = ["export-api"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}