[package]
name = "canister-c"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
export-api = []

[dependencies]
candid = { workspace = true }
ic-canister = { path = "../../ic-canister" }
ic-exports = { path = "../../../ic-exports" }
ic-metrics = { path = "../../../ic-metrics", features = ["export-api"] }
ic-storage = { path = "../../../ic-storage" }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
