[package]
name = "canister-d"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
export-api = []

[dependencies]
serde = { workspace = true }
candid = { workspace = true }

ic-exports = {path = "../../../ic-exports"}
ic-storage = {path = "../../../ic-storage"}
ic-canister = {path = "../../ic-canister"}
ic-helpers = {path = "../../../ic-helpers"}
ic-stable-structures = {path = "../../../ic-stable-structures"}

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}