[package]
name = "canister-d"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

[dependencies]
candid = { workspace = true }
ic-canister = {path = "../../ic-canister"}
ic-exports = {path = "../../../ic-exports"}
ic-stable-structures = {path = "../../../ic-stable-structures"}
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}