[package]
name = "canister-e"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
export-api = []


[dependencies]
serde = { workspace = true }
candid = { workspace = true }

ic-exports = { path = "../../../ic-exports" }
ic-storage = { path = "../../../ic-storage" }
ic-canister = { path = "../../ic-canister" }
ic-metrics = { path = "../../../ic-metrics" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}