[package]
name = "canister-e"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
export-api = []


[dependencies]
candid = { workspace = true }
ic-canister = { path = "../../ic-canister" }
ic-exports = { path = "../../../ic-exports" }
ic-storage = { path = "../../../ic-storage" }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
